# lasso-python

./: .coverage-tmp.html  .gitignore  .markdownlint.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.rst  Taskfile.yml  index.html  lint.txt  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml
.github/ISSUE_TEMPLATE/: ✨-feature-request.md  🌈-generic-ticket.md  🐛-bug-report.md
.github/workflows/: ci-cd.yml  test-runner.yml
changelog/: index.html
contributing/: index.html
coverage/: covindex.html  d_233c5ceebba6ed8d___init___py.html  d_233c5ceebba6ed8d_array_type_py.html  d_233c5ceebba6ed8d_binout_py.html  d_233c5ceebba6ed8d_d3plot_header_py.html  d_233c5ceebba6ed8d_d3plot_py.html  d_233c5ceebba6ed8d_femzip_mapper_py.html  d_233c5ceebba6ed8d_filter_type_py.html  d_233c5ceebba6ed8d_lsda_py3_py.html  d_233c5ceebba6ed8d_test_d3plot_header_py.html  d_233c5ceebba6ed8d_test_d3plot_py.html  d_233c5ceebba6ed8d_test_mapper_py.html  d_2a4fb047d150a06c___init___py.html  d_2a4fb047d150a06c_console_coloring_py.html  d_2a4fb047d150a06c_decorators_py.html  d_2a4fb047d150a06c_language_py.html  d_2a4fb047d150a06c_rich_progress_bars_py.html  d_306dfaf9bde54f34___init___py.html  d_306dfaf9bde54f34_logging_py.html  d_542c2d228fe7f497___init___py.html  d_542c2d228fe7f497_sampling_py.html  d_542c2d228fe7f497_stochastic_py.html  d_542c2d228fe7f497_test_sampling_py.html  d_542c2d228fe7f497_test_stochastic_py.html  d_8c1f8dfb65cd62c9___init___py.html  d_8c1f8dfb65cd62c9_binary_buffer_py.html  d_8c1f8dfb65cd62c9_files_py.html  d_8c1f8dfb65cd62c9_test_binary_buffer_py.html  d_8c1f8dfb65cd62c9_test_files_py.html  d_9912f5017dc9b562___init___py.html  d_9d33c8608d0cbf05___init___py.html  d_9d33c8608d0cbf05_algorithms_py.html  d_a84314dfc0388a73___init___py.html  d_a84314dfc0388a73_plot_shell_mesh_py.html  d_d5eca2bf8c9eb372___init___py.html  d_d5eca2bf8c9eb372_diffcrash_run_py.html  d_d5eca2bf8c9eb372_run_py.html  d_ec83283597faf9de___init___py.html  d_ec83283597faf9de_clustering_betas_py.html  d_ec83283597faf9de_html_str_eles_py.html  (+21 more)
css/: video.css
diffcrash/diffcrash/: index.html
diffcrash/diffcrash_run/: index.html
diffcrash/run/: index.html
dimred/: index.html
dimred/DimredRun/: index.html
dimred/KeywordTypes/: index.html
dimred/clustering_betas/: index.html
dimred/command_line_interface/: index.html
dimred/plot_beta_clusters/: index.html
dimred/pod_functions/: index.html
dimred/subsampling_methods/: index.html
dimred/svd/: index.html
docs/: Makefile  index.html  index.md  make.bat  mkdocs.yml
docs/diffcrash/: diffcrash.md  diffcrash_run.md  run.md
docs/dimred/: DimredRun.md  KeywordTypes.md  clustering_betas.md  command_line_interface.md  pod_functions.md  subsampling_methods.md  svd.md
docs/docs/diffcrash/: run.md
docs/docs/dimred/: DimredRun.md  KeywordTypes.md  clustering_betas.md  command_line_interface.md  dimred.md  plot_beta_clusters.md  pod_functions.md  run.md  subsampling_methods.md  svd.md
docs/docs/dyna/: Binout.md  D3plot.md  performance_info.md
docs/docs/femzip/: FemzipAPI.md  FemzipBufferInfo.md  FemzipError.md  femzip.md
docs/dyna/: ArrayType.md  Binout.md  D3plot.md  D3plotHeader.md  FilterType.md  index.md  performance_info.md
docs/femzip/: FemzipAPIStatus.md  FemzipFileMetadata.md  FemzipVariableCategory.md  VariableInfo.md  index.md
docs/source/: conf.py  index.rst
docs/source/_templates/: layout.html
docs/source/diffcrash/: diffcrash.rst  diffcrash_run.rst  run.rst
docs/source/dimred/: DimredRun.rst  dimred.rst  run.rst
docs/source/dyna/: ArrayType.rst  Binout.rst  D3plot.rst  D3plotHeader.rst  FilterType.rst  dyna.rst  dyna_performance_info.rst
docs/source/femzip/: FemzipAPI.rst  FemzipAPIStatus.rst  FemzipBufferInfo.rst  FemzipError.rst  FemzipFileMetadata.rst  VariableInfo.rst  femzip.rst
dyna/: index.html
dyna/ArrayType/: index.html
dyna/Binout/: index.html
dyna/D3plot/: index.html
dyna/D3plotHeader/: index.html
dyna/FilterType/: index.html
dyna/performance_info/: index.html
femzip/: index.html
femzip/FemzipAPI/: index.html
femzip/FemzipAPIStatus/: index.html
femzip/FemzipBufferInfo/: index.html
femzip/FemzipError/: index.html
femzip/FemzipFileMetadata/: index.html
femzip/FemzipVariableCategory/: index.html
femzip/VariableInfo/: index.html
lasso/: __init__.py  logging.py
lasso/diffcrash/: DiffcrashRun.py  __init__.py  diffcrash_run.py  run.py
lasso/dimred/: DimredRun.py  __init__.py  dimred_run.py  graph_laplacian.py  hashing.py  hashing_sphere.py  run.py  testPlotCreator.py  test_DimredRun.py  test_dimred_run.py  test_plot_creator.py
lasso/dimred/sphere/: __init__.py  algorithms.py
lasso/dimred/svd/: KeywordTypes.py  clustering_betas.py  html_str_eles.py  keyword_types.py  plot_beta_clusters.py  plotly_latest.min.js  pod_functions.py  subsampling_methods.py  (+4 more)
lasso/dyna/: ArrayType.py  Binout.py  D3plot.py  D3plotHeader.py  FemzipMapper.py  FilterType.py  __init__.py  array_type.py  binout.py  d3plot.py  d3plot_header.py  femzip_mapper.py  filter_type.py  lsda_py3.py  test_D3plot.py  test_D3plotHeader.py  test_D3plot_2.py  test_d3plot.py  test_d3plot_header.py  test_mapper.py
lasso/femzip/: __init__.py  femzip_api.py  fz_config.py  libintlc.so.5
lasso/io/: BinaryBuffer.py  binary_buffer.py  files.py  test_BinaryBuffer.py  test_binary_buffer.py  test_files.py
lasso/math/: sampling.py  stochastic.py  test_sampling.py  test_stochastic.py
lasso/plot/: __init__.py  _plot_utils.py
lasso/plotting/: __init__.py  plot_shell_mesh.py  plotting.py
lasso/utils/: ConsoleColoring.py  decorators.py  language.py  richProgressBars.py  rich_progress_bars.py
search/: search_index.json
src/lasso/: __init__.py  logging.py
test/: plot_creator_helper.py  read_write_test.py
test/d3plot_node_temperature/: d3plot  d3plot01
test/d3plot_solid_int/: d3plot  d3plot02  d3plot05  d3plot06  d3plot07  d3plot08  d3plot10  d3plot11  d3plot12  d3plot14  d3plot15  d3plot17  d3plot18
test/femzip/: d3plot.fz
test/order_d3plot/: d3plot01
(+96 files in other folders)
