[project]
name = "lasso-python"
description = "An open-source CAE and Machine Learning library."
license-files = ["LICENSE.md"]
readme = "README.rst"
dynamic = ["version"]
authors = [{ name = "open-lasso-python", email = "open.lasso.python@gmail.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "Topic :: Utilities",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

requires-python = ">=3.9"
dependencies = [
    "h5py==3.*",
    "scipy==1.*",
    "numpy==1.*",
    "plotly==5.*",
    # "attrs==23.*"
    "psutil==5.*",
    "rich==13.*",
    "pandas==2.*",
    "scikit_learn==1.*"
]

[tool.setuptools]
package-dir = {"" = "src"}

[project.scripts]
diffcrash = "lasso.diffcrash.run:main"
dimred = "lasso.dimred.run:main"

[dependency-groups]
dev = [
    "pytest==8.*",
    "pytest-cov==5.*",
    "black==24.*",
    "ruff==0.3.*",
    "mkdocs==1.*",
    "mkdocs-material==9.*",
    "mkdocstrings[python]==0.*",
    "mkdocs-coverage==1.*",
    "git-changelog==2.*",
    "twine==5.*",
    "go-task-bin"
]

[build-system]
requires = ["setuptools>=78", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.black]
# We allow longer lines since 80 is quite short
line-length=100

[tool.flake8]
exclude = [".git", "*migrations*"]
max-line-length = 100
